@@ -1,0 +1,4 @@
+<%
+    print y
+    y = 10
+%>
